# gst-cashflow-rl

./: .gitignore  Dockerfile  README.md  openenv.yaml  pyproject.toml
gst_cashflow_env/: __init__.py  client.py  models.py
server/: __init__.py  app.py  gst_environment.py  ledger.py  requirements.txt  reward.py  scenario_generator.py
tests/: test_environment.py  test_ledger.py  test_reward.py  test_scenarios.py
training/: evaluate.py  train_grpo.ipynb  train_grpo.py
