[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gst-cashflow-env"
version = "0.1.0"
description = "GST Cash Flow Optimization RL Environment for Indian SMEs — OpenEnv framework"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "trl>=0.8.0",
    "datasets>=2.18.0",
    "accelerate>=0.28.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["gst_cashflow_env*", "server*"]
